# memstrata

./: .gitmodules  README.md  build_and_install_kernel.sh  build_and_install_qemu.sh  build_orchestrator.sh  create_vm.sh  vm_install_workloads.sh
orchestrator/: CMakeLists.txt  colorctl.cpp  main.cpp  send_msg.cpp
utils/: disable_cpu_freq_scaling.sh
workload_scripts/602.gcc_s/: exp_config.sh  prepare_exp.sh  run_exp.sh
workload_scripts/603.bwaves_s/: exp_config.sh  prepare_exp.sh  run_exp.sh
workload_scripts/605.mcf_s/: exp_config.sh  prepare_exp.sh  run_exp.sh
workload_scripts/607.cactuBSSN_s/: exp_config.sh  prepare_exp.sh  run_exp.sh
workload_scripts/619.lbm_s/: exp_config.sh  prepare_exp.sh  run_exp.sh
workload_scripts/631.deepsjeng_s/: exp_config.sh  prepare_exp.sh  run_exp.sh
workload_scripts/638.imagick_s/: exp_config.sh  prepare_exp.sh  run_exp.sh
workload_scripts/649.fotonik3d_s/: exp_config.sh  prepare_exp.sh  run_exp.sh
workload_scripts/654.roms_s/: exp_config.sh  prepare_exp.sh  run_exp.sh
workload_scripts/657.xz_s/: exp_config.sh  prepare_exp.sh  run_exp.sh
workload_scripts/bc-urand/: exp_config.sh  prepare_exp.sh  run_exp.sh
workload_scripts/bc-web/: exp_config.sh  prepare_exp.sh  run_exp.sh
workload_scripts/bfs-urand/: exp_config.sh  prepare_exp.sh  run_exp.sh
workload_scripts/bfs-web/: exp_config.sh  prepare_exp.sh  run_exp.sh
workload_scripts/cc-urand/: prepare_exp.sh  run_exp.sh
workload_scripts/cc-web/: exp_config.sh  prepare_exp.sh  run_exp.sh
workload_scripts/dacapo_cassandra/: exp_config.sh  run_exp.sh
(+146 files in other folders)
